--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,34 @@
 body {
+  box-sizing: border-box;
   font-family: sans-serif;
+  margin: 2rem;
 }
 
 .tabs {
   background-color: lightcyan;
   font-family: "lucida grande", sans-serif;
+  position: relative;
+}
+
+.tabs__timers-wrapper {
+  display: grid;
+  grid-template-rows: 3rem 1fr;
+}
+
+.tabs__timerlist {
+  display: flex;
+  justify-content: center;
 }
 
 .tabs__tablist {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
 }
 
 .tabs__timer {
   background-color: blueviolet;
   border: 1px solid red;
-  grid-column: 1;  
-  grid-row: 1;  
+  grid-column: 1;
+  grid-row: 1;
   height: 100%;
   overflow: hidden;
   position: relative;
@@ -25,30 +36,21 @@ body {
 }
 
 .tabs__tab {
+  background: transparent;
+  border: 1px solid red;
   grid-column: 1/-1;
   grid-row: 2;
+  margin: 0;
+  position: relative;
 }
 
 .tabs__timer::after {
   background-color: orangered;
-  content: '';
+  content: "";
   height: 100%;
   position: absolute;
   top: -100%;
   width: 100%;
-}
-
-[role="tab"] {
-  position: relative;
-  margin: 0;
-  padding: 0.3em 0.5em 0.4em;
-  border: 1px solid hsl(219, 1%, 72%);
-  border-radius: 0.2em 0.2em 0 0;
-  box-shadow: 0 0 0.2em hsl(219, 1%, 72%);
-  overflow: visible;
-  font-family: inherit;
-  font-size: inherit;
-  background: hsl(220, 20%, 94%);
 }
 
 @media only screen and (min-width: 500px) {
@@ -56,26 +58,49 @@ body {
     background-color: blanchedalmond;
   }
 
-  .tabs__tablist {
+  .tabs__timers-wrapper {
     display: grid;
-    grid-template-columns: 20% 80%;
+    grid-template-columns: 10% 90%;
+    grid-template-rows: auto;
+    position: absolute;
+    top: 0;
+  }
+
+  .tabs__timerlist {
+    flex-direction: column;
+    align-items: center;
   }
 
   .tabs__timer {
-    background-color: blueviolet;
-    border: 1px solid red;
-    height: 100%;
-    overflow: hidden;
-    position: relative;
-    width: 30px;
+    height: var(--max-tab-height);
+  }
+
+  .tabs__tablist {
+    grid-template-columns: auto;
+  }
+
+  .tabs__tab {
+    grid-column: 1/-1;
+    grid-row: auto;    
+  }
+
+  .tabs__tab:not(:last-child),
+  .tabs__timer:not(:last-child) {
+    margin-bottom: 1rem;
   }
   
-  .tabs__timer::after {
-    background-color: orangered;
-    content: '';
-    height: 100%;
-    position: absolute;
-    top: -100%;
-    width: 100%;
+  .tabs__tab__title,
+  .tabs__tab__subtitle {
+    color: white;
+    display: block;
+    text-align: left;
   }
+  
+  .tabs__tab__title {
+    margin-bottom: .5rem;
+    font-weight: bold;
+  }
+
+  .tabs__tab__subtitle {
+  }  
 }
